refactor locations to accommodations
